--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mqtt": "^4.3.7",
+    "r9t-commons": "github:sailingscally/r9t-commons",
     "sqlite3": "^5.1.2"
   }
 }
